--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-    "scripts": {
-        "clean": "shx rm -rf dist",
-        "start": "nollup -c --environment NODE_ENV:development",
-        "build": "npm run clean && rollup -c --environment NODE_ENV:production"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.5.5",
-        "nollup": "^0.15.0",
-        "rollup": "^2.38.5",
-        "rollup-plugin-babel": "^4.3.3",
-        "rollup-plugin-commonjs-alternate": "^0.6.1",
-        "rollup-plugin-hot-css": "^0.2.1",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-replace": "^2.2.0",
-        "rollup-plugin-static-files": "0.0.1",
-        "rollup-plugin-terser": "^5.1.1",
-        "shx": "^0.3.2"
-    },
-    "dependencies": {
-        "three": "^0.127.0",
-        "urdf-loader": "^0.10.1"
-    }
+  "name": "robot-kinematics-visualization",
+  "version": "0.1.0",
+  "description": "A web application that visualizes robot kinematics.",
+  "private": true,
+  "scripts": {
+    "clean": "shx rm -rf dist",
+    "start": "nollup -c --environment NODE_ENV:development",
+    "build": "npm run clean && rollup -c --environment NODE_ENV:production"
+  },
+  "author": "Sheng Ling, Ping Lu",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.13.15",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
+    "nollup": "^0.15.0",
+    "rollup": "^2.38.5",
+    "rollup-plugin-commonjs-alternate": "^0.6.1",
+    "rollup-plugin-hot-css": "^0.2.1",
+    "rollup-plugin-static-files": "0.0.1",
+    "rollup-plugin-terser": "^5.1.1",
+    "shx": "^0.3.2"
+  },
+  "dependencies": {
+    "three": "^0.127.0",
+    "urdf-loader": "^0.10.1"
+  }
 }
