--- a/package.json
+++ b/package.json
@@ -4,27 +4,24 @@
   "description": "A web application that visualizes robot kinematics.",
   "private": true,
   "scripts": {
-    "clean": "shx rm -rf dist",
-    "start": "nollup -c --environment NODE_ENV:development",
-    "build": "npm run clean && rollup -c --environment NODE_ENV:production"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear"
   },
   "author": "Sheng Ling, Ping Lu",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.13.15",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^2.4.2",
-    "nollup": "^0.16.1",
-    "rollup": "^2.45.2",
-    "rollup-plugin-commonjs-alternate": "^0.6.1",
-    "rollup-plugin-hot-css": "^0.2.1",
-    "rollup-plugin-static-files": "0.0.1",
-    "rollup-plugin-terser": "^5.1.1",
-    "shx": "^0.3.2"
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0"
   },
   "dependencies": {
+    "sirv-cli": "^1.0.0",
     "three": "^0.127.0",
     "urdf-loader": "^0.10.1"
   }
