--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,5 @@
 
   "include": ["src/**/*"],
   "exclude": ["node_modules/*", "public/*"],
-  "files": ["src/@types/index.d.ts"]
+  "files": ["src/types/index.d.ts"]
 }
